--- a/package.json
+++ b/package.json
@@ -19,16 +19,12 @@
     "jest-junit-reporter": "^1.1.0",
     "json-loader": "^0.5.7",
     "prettier": "^1.16.4",
-    "serverless": "^1.38.0",
-    "serverless-domain-manager": "^3.1.0",
-    "serverless-offline": "^4.9.0",
-    "serverless-webpack": "^5.2.0",
     "webpack": "^4.29.6"
   },
   "dependencies": {
-    "node-fetch": "^2.3.0",
-    "postgres-migrations": "^3.0.1",
-    "uuid": "^3.3.2"
+    "mysql": "^2.16.0",
+    "node-db-migration": "^1.3.3",
+    "node-fetch": "^2.3.0"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
@@ -38,11 +34,9 @@
     "output": "./test/junit.xml"
   },
   "scripts": {
-    "test": "node ./src/tests/migrate.js",
-    "dev-deploy": "serverless deploy --stage dev",
-    "prod-deploy": "serverless deploy --stage prod",
-    "dev-remove": "serverless remove --stage dev",
-    "prod-remove": "serverless remove --stage prod",
+    "init": "node ./src/tests/migrate.js init",
+    "resolve": "node ./src/tests/migrate.js resolve",
+    "migrate": "node ./src/tests/migrate.js migrate",
     "lint": "./node_modules/.bin/eslint src"
   }
 }
